# neng-pass

./: .gitignore  Cargo.toml  README.adoc  README.md
.github/workflows/: tauri.yml
neng-pass/: Cargo.toml
neng-pass-android/: settings.gradle.kts
neng-pass-android/app/: Cargo.toml  build.gradle.kts
neng-pass-android/app/src/: lib.rs
neng-pass-android/app/src/androidTest/java/io/github/earthtraveller1/nengpass/: ExampleInstrumentedTest.kt
neng-pass-android/app/src/main/: AndroidManifest.xml
neng-pass-android/app/src/main/java/io/github/earthtraveller1/nengpass/: LoginActivity.kt  NengPass.kt  PasswordListActivity.kt  PasswordsOpenHelper.kt
neng-pass-android/app/src/main/java/io/github/earthtraveller1/nengpass/ui/theme/: Color.kt  Theme.kt  Type.kt
neng-pass-android/app/src/main/res/values/: strings.xml  themes.xml
neng-pass-android/app/src/test/java/io/github/earthtraveller1/nengpass/: ExampleUnitTest.kt
neng-pass-android/gradle/wrapper/: gradle-wrapper.properties
neng-pass-gui/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
neng-pass-gui/src/: Button.tsx  Index.tsx  Login.tsx  NewPassword.tsx  Password.tsx  PasswordInput.tsx  Passwords.tsx  Setup.tsx  common.ts  main.tsx
neng-pass-gui/src-tauri/: Cargo.toml  tauri.conf.json
neng-pass-gui/src-tauri/src/: main.rs
neng-pass-gui/src/components/: Button.tsx  ErrorBox.tsx  TextInputField.tsx
neng-pass/src/: crypto.rs  lib.rs  main.rs
src/: crypto.rs  lib.rs  main.rs
