[package]
name = "neng-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
argon2 = "0.5.3"
clap = "4.4.18"
directories = "5.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rpassword = "7.3.1"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
