[package]
name = "neng-pass-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_log = "0.1.3"
jni = "0.21.1"
log = "0.4.21"
log-panics = "2.1.0"
neng-pass = { path = "../../neng-pass" }
